--- a/db/Pipeline.lpc.html
+++ b/db/Pipeline.lpc.html
@@ -81,11 +81,11 @@
 </TR>
 <TR >
 <TD >reg_exmem</TD>
-<TD >107</TD>
+<TD >106</TD>
 <TD >6</TD>
 <TD >0</TD>
 <TD >6</TD>
-<TD >106</TD>
+<TD >105</TD>
 <TD >6</TD>
 <TD >6</TD>
 <TD >6</TD>
@@ -97,14 +97,14 @@
 </TR>
 <TR >
 <TD >ula_ex</TD>
-<TD >68</TD>
-<TD >2</TD>
 <TD >0</TD>
-<TD >2</TD>
-<TD >34</TD>
-<TD >2</TD>
-<TD >2</TD>
-<TD >2</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -113,11 +113,11 @@
 </TR>
 <TR >
 <TD >mux2_ex_B</TD>
-<TD >65</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
-<TD >32</TD>
+<TD >0</TD>
+<TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -129,14 +129,14 @@
 </TR>
 <TR >
 <TD >mux2_ex_A</TD>
-<TD >65</TD>
-<TD >27</TD>
 <TD >0</TD>
-<TD >27</TD>
-<TD >32</TD>
-<TD >27</TD>
-<TD >27</TD>
-<TD >27</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -145,14 +145,14 @@
 </TR>
 <TR >
 <TD >reg_idex</TD>
-<TD >157</TD>
-<TD >25</TD>
 <TD >0</TD>
-<TD >25</TD>
-<TD >156</TD>
-<TD >25</TD>
-<TD >25</TD>
-<TD >25</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -161,14 +161,30 @@
 </TR>
 <TR >
 <TD >somador_id</TD>
-<TD >64</TD>
-<TD >2</TD>
 <TD >0</TD>
-<TD >2</TD>
-<TD >32</TD>
-<TD >2</TD>
-<TD >2</TD>
-<TD >2</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >controle_id</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -177,14 +193,14 @@
 </TR>
 <TR >
 <TD >comparador_id</TD>
-<TD >64</TD>
-<TD >1</TD>
 <TD >0</TD>
-<TD >1</TD>
-<TD >1</TD>
-<TD >1</TD>
-<TD >1</TD>
-<TD >1</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -193,11 +209,11 @@
 </TR>
 <TR >
 <TD >breg_id</TD>
-<TD >49</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
-<TD >64</TD>
+<TD >0</TD>
+<TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -209,14 +225,14 @@
 </TR>
 <TR >
 <TD >reg_ifid</TD>
-<TD >65</TD>
-<TD >6</TD>
 <TD >0</TD>
-<TD >6</TD>
-<TD >64</TD>
-<TD >6</TD>
-<TD >6</TD>
-<TD >6</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -225,11 +241,11 @@
 </TR>
 <TR >
 <TD >mi_if|altsyncram_component|auto_generated</TD>
-<TD >9</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
-<TD >32</TD>
+<TD >0</TD>
+<TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -241,11 +257,11 @@
 </TR>
 <TR >
 <TD >mi_if</TD>
-<TD >9</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
-<TD >32</TD>
+<TD >0</TD>
+<TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -257,14 +273,14 @@
 </TR>
 <TR >
 <TD >somador_if</TD>
-<TD >64</TD>
-<TD >32</TD>
 <TD >0</TD>
-<TD >32</TD>
-<TD >32</TD>
-<TD >32</TD>
-<TD >32</TD>
-<TD >32</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -273,11 +289,11 @@
 </TR>
 <TR >
 <TD >pc_if</TD>
-<TD >33</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
-<TD >32</TD>
+<TD >0</TD>
+<TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -289,14 +305,14 @@
 </TR>
 <TR >
 <TD >mux4_if</TD>
-<TD >130</TD>
-<TD >4</TD>
 <TD >0</TD>
-<TD >4</TD>
-<TD >32</TD>
-<TD >4</TD>
-<TD >4</TD>
-<TD >4</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
