--- a/db/Pipeline.lpc.html
+++ b/db/Pipeline.lpc.html
@@ -144,6 +144,22 @@
 <TD >0</TD>
 </TR>
 <TR >
+<TD >mux4_saida_FPGA</TD>
+<TD >130</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >32</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
 <TD >mux4_wb</TD>
 <TD >130</TD>
 <TD >32</TD>
@@ -194,13 +210,13 @@
 <TR >
 <TD >md_mem</TD>
 <TD >42</TD>
-<TD >32</TD>
+<TD >0</TD>
+<TD >0</TD>
 <TD >0</TD>
 <TD >32</TD>
-<TD >32</TD>
-<TD >32</TD>
-<TD >32</TD>
-<TD >32</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
